# hendrix-flanger

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
plugin/: CMakeLists.txt
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/src/dsp/: DCBlocker.h  DelayLine.h  DubEcho.h  EnvelopeFollower.h  GainProcessor.h  LFO.h  ThroughZeroFlanger.h
tests/: conftest.py  test_plugin_basic.py  test_plugin_dub_echo.py  test_plugin_edge_cases.py  test_plugin_flanger.py  test_plugin_presets.py  test_plugin_quality_gates.py  test_plugin_signals.py
